--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -3,8 +3,8 @@ html
   head
     meta(charset='utf-8')
     title Awesome Electron Desktop App
-    meta(name='description', content='Download the interactive app for doing whatever it does.')
-    meta(name='author', content='Arek Sredzki')
+    meta(name='description', content='Download the Annoying Tracker and start tracking your time passively today.')
+    meta(name='author', content='Jentamin')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     base(href="/")
 
@@ -23,7 +23,7 @@ html
           .navbar-header
             a.pull-left(href='/')
               img.navbar-logo(src='/images/logo.svg')
-            a.navbar-brand(href='/') Electron App
+            a.navbar-brand(href='/') The Annoying Tracker
           .collapse.navbar-collapse
             ul.nav.navbar-nav
               li(ng-class="{ active: isActive('/')}")
