various text changes

--- a/assets/js/download/download.pug
+++ b/assets/js/download/download.pug
@@ -1,6 +1,6 @@
 .row.text-center
   .col-md-12
-    h2 Download our Electron App 
+    h2 Download the Annoying Tracker desktop app
       small.pull-right
         | Channel: 
         select(
