--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -22,7 +22,7 @@ html
         .container-fluid
           .navbar-header
             a.pull-left(href='/')
-              img.navbar-logo(src='/images/logo.svg')
+              img.navbar-logo(src='/images/logo.png')
             a.navbar-brand(href='/') The Annoying Tracker
           .collapse.navbar-collapse
             ul.nav.navbar-nav
