--- a/views/404.pug
+++ b/views/404.pug
@@ -12,8 +12,8 @@ html
         .container-fluid
           .navbar-header
             a.pull-left(href='/')
-              img.navbar-logo(src='/images/logo.svg')
-            a.navbar-brand(href='/') Electron App
+              img.navbar-logo(src='/images/logo.png')
+            a.navbar-brand(href='/') The Annoying Tracker
           .collapse.navbar-collapse
             ul.nav.navbar-nav
               li
